--- a/templates/adminBase.html.twig
+++ b/templates/adminBase.html.twig
@@ -418,10 +418,11 @@
         <div class="left-side-bar">
 			<div class="brand-logo">
 				<a href="index.html">
-					<img src="vendors/images/YumLink_logo.png" alt="" class="dark-logo" />
+					<img src="vendors/images/YumLink_logo.png" alt="Logo"  style="max-width: 100px; height: auto;"class="dark-logo" />
 					<img
 						src="vendors/images/YumLink_logo.png"
-						alt=""
+						alt="Logo"
+						style="max-width: 100px; height: auto;"
 						class="light-logo"
 					/>
 				</a>
@@ -437,16 +438,12 @@
 								<span class="micon bi bi-house"></span
 								><span class="mtext">Home</span>
 							</a>
-							<ul class="submenu">
-								<li><a href="index.html">Dashboard style 1</a></li>
-								<li><a href="index2.html">Dashboard style 2</a></li>
-								<li><a href="index3.html">Dashboard style 3</a></li>
-							</ul>
+							
 						</li>
 						<li class="dropdown">
 							<a href="javascript:;" class="dropdown-toggle">
 								<span class="micon bi bi-textarea-resize"></span
-								><span class="mtext">Forms</span>
+								><span class="mtext">Produits</span>
 							</a>
 							<ul class="submenu">
 								<li><a href="form-basic.html">Form Basic</a></li>
@@ -462,18 +459,18 @@
 						</li>
 						<li class="dropdown">
 							<a href="javascript:;" class="dropdown-toggle">
-								<span class="micon bi bi-table"></span
-								><span class="mtext">Tables</span>
+								<span class="icon-copy fa fa-user-circle-o"></span>
+								<span class="mtext">Administrateurs</span>
 							</a>
 							<ul class="submenu">
-								<li><a href="basic-table.html">Basic Tables</a></li>
-								<li><a href="datatable.html">DataTables</a></li>
+								<li><a href="basic-table.html">Liste des administrateurs</a></li>
+								<li><a href="datatable.html">Ajouter un administrateur</a></li>
 							</ul>
 						</li>
 						<li>
 							<a href="calendar.html" class="dropdown-toggle no-arrow">
 								<span class="micon bi bi-calendar4-week"></span
-								><span class="mtext">Calendar</span>
+								><span class="mtext">liste des utilisateurs</span>
 							</a>
 						</li>
 						<li class="dropdown">
