--- a/templates/chefbase.html.twig
+++ b/templates/chefbase.html.twig
@@ -51,7 +51,7 @@
 		<div class="row align-items-center">
 			<div class="col-lg-3 col-md-4">
 				<div class="header-left">
-					<p>Welcome To Arrola Health!</p>
+					<p>Welcome {{ app.user.username }}</p>
 				</div>
 			</div>
 			<div class="col-lg-9 col-md-8">
@@ -248,7 +248,7 @@
 							</div>
 						</div>
 						<div class="optional-item">
-							<a href="appointment.html" class="default-btn two">Book An Appointment</a>
+							<a href="{{ path('app_logout') }}" class="default-btn two">Log out </a>
 						</div>
 					</div>
 					<div class="mobile-nav">
