--- a/templates/WelcomeBase.html.twig
+++ b/templates/WelcomeBase.html.twig
@@ -28,22 +28,26 @@
 			<link rel="stylesheet" href={{asset("frontend/assets/css/style.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/css/responsive.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/css/theme-dark.css")}}>
+			 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 		{% endblock %}
 		{% block js %}
-			<script src="frontend/assets/js/jquery.min.js"></script>
+		 <!-- Inclure Leaflet.js -->
+   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="frontend/assets/js/jquery.min.js"></script> <!-- Inclure jQuery en premier -->
 
-			<script src={{asset("frontend/assets/js/bootstrap.bundle.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/magnific-popup.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/odometer.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/appear.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/meanmenu.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/owl.carousel.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/wow.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/jquery-ui.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/ajaxchimp.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/form-validator.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/contact-form-script.js")}}></script>
-			<script src={{asset("frontend/assets/js/custom.js")}}></script>
+    <!-- Ensuite, inclure les autres scripts -->
+    <script src={{asset("frontend/assets/js/bootstrap.bundle.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/magnific-popup.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/odometer.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/appear.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/meanmenu.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/owl.carousel.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/wow.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/jquery-ui.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/ajaxchimp.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/form-validator.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/contact-form-script.js")}}></script>
+    <script src={{asset("frontend/assets/js/custom.js")}}></script>
 		</head>
 	</html>
 </body>{% endblock %}</head><body>{% block header %}
@@ -141,8 +145,8 @@
 				<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
 					<ul class="navbar-nav m-auto">
 						<li class="nav-item">
-							<a href="{{ path('Welcome') }}" class="nav-link active">
-								Home 
+							<a href="#" class="nav-link active">
+								Home
 
 							</a>
 						</li>
@@ -260,7 +264,7 @@
 							</div>
 						</div>
 						<div class="optional-item">
-							<a href="login.html" class="default-btn two">Log in</a>
+							<a href="{{ path('app_login') }}" class="default-btn two">Log in</a>
 						</div>
 					</div>
 					<div class="mobile-nav">
@@ -281,68 +285,11 @@
 			</div>
 		</nav>
 	</div>
-</body></body></div></div>{% endblock %}{% block body %}
-<div class="banner-area-three">
-<div class="container-fluid">
-<div class="banner-content-two">
-<span class="wow animate__animated animate__fadeInDown" data-wow-delay="50ms" data-wow-duration="1000ms">Stay Healthy with Good Food!</span>
-<h1 class="wow animate__animated animate__fadeInUp" data-wow-delay="100ms" data-wow-duration="1000ms">Healthy & Delicious Backed Pasta</h1>
-<p class="wow animate__animated animate__fadeInDown" data-wow-delay="200ms" data-wow-duration="1000ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum </p>
-<div class="banner-btn wow animate__animated animate__fadeInUp" data-wow-delay="300ms" data-wow-duration="1000ms">
-<a href="about.html" class="default-btn">Learn More</a>
-<a href="contact.html" class="default-btn two">Contact Us</a>
-</div>
-<div class="banner-content-shape">
-<img src="assets/images/shape/shape2.png" alt="Images">
-<img src="assets/images/shape/shape1.png" alt="Images">
-<img src="assets/images/shape/shape7.png" alt="Images">
-</div>
-</div>
-</div>
-</div>
+</body></body></div></div>{% endblock %}
+{% block body %}{% endblock %}
 
 
-<div class="choose-slider-area pt-100">
-<div class="container">
-<div class="section-title text-center">
-<span>Choose Category</span>
-<h2>Recipe Categories</h2>
-</div>
-<div class="choose-slider owl-carousel owl-theme pt-45">
-<div class="choose-item">
-<a href="recipe-details.html">
-<img src="assets/images/choose/choose-img1.png" alt="Images">
-</a>
-<h3><a href="recipe-details.html">Appetizers</a></h3>
-</div>
-<div class="choose-item">
-<a href="recipe-details.html">
-<img src="assets/images/choose/choose-img2.png" alt="Images">
-</a>
-<h3><a href="recipe-details.html">Fish</a></h3>
-</div>
-<div class="choose-item">
-<a href="recipe-details.html">
-<img src="assets/images/choose/choose-img3.png" alt="Images">
-</a>
-<h3><a href="recipe-details.html">Chicken</a></h3>
-</div>
-<div class="choose-item">
-<a href="recipe-details.html">
-<img src="assets/images/choose/choose-img4.png" alt="Images">
-</a>
-<h3><a href="recipe-details.html">Vegetable</a></h3>
-</div>
-<div class="choose-item">
-<a href="recipe-details.html">
-<img src="assets/images/choose/choose-img1.png" alt="Images">
-</a>
-<h3><a href="recipe-details.html">Appetizers</a></h3>
-</div>
-</div>
-</div>
-</div>
-{% endblock %}{% block footer %}<footer class="footer-area footer-area-bg"><div class="container"><div class="footer-top pt-100 pb-70">
+{% block footer %}<footer class="footer-area footer-area-bg"><div class="container"><div class="footer-top pt-100 pb-70">
 <div class="row">
 	<div class="col-lg-3 col-sm-6">
 		<div class="footer-widget">
@@ -441,7 +388,7 @@
 		<div class="footer-widget ps-5">
 			<h3>Newsletter</h3>
 			<p>Hello</p>
-			<div class="newsletter-area">
+			<!--<div class="newsletter-area">
 				<form class="newsletter-form" data-toggle="validator" method="POST">
 					<input type="email" class="form-control" placeholder="Enter Your Email" name="EMAIL" required autocomplete="off">
 					<button class="subscribe-btn" type="submit">
@@ -449,7 +396,7 @@
 					</button>
 					<div id="validator-newsletter" class="form-result"></div>
 				</form>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div></div></div><div class="copyright-area"><div class="container">
