--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,22 +28,26 @@
 			<link rel="stylesheet" href={{asset("frontend/assets/css/style.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/css/responsive.css")}}>
 			<link rel="stylesheet" href={{asset("frontend/assets/css/theme-dark.css")}}>
+			 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 		{% endblock %}
 		{% block js %}
-			<script src="frontend/assets/js/jquery.min.js"></script>
+		 <!-- Inclure Leaflet.js -->
+   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="frontend/assets/js/jquery.min.js"></script> <!-- Inclure jQuery en premier -->
 
-			<script src={{asset("frontend/assets/js/bootstrap.bundle.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/magnific-popup.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/odometer.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/appear.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/meanmenu.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/owl.carousel.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/wow.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/jquery-ui.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/ajaxchimp.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/form-validator.min.js")}}></script>
-			<script src={{asset("frontend/assets/js/contact-form-script.js")}}></script>
-			<script src={{asset("frontend/assets/js/custom.js")}}></script>
+    <!-- Ensuite, inclure les autres scripts -->
+    <script src={{asset("frontend/assets/js/bootstrap.bundle.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/magnific-popup.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/odometer.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/appear.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/meanmenu.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/owl.carousel.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/wow.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/jquery-ui.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/ajaxchimp.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/form-validator.min.js")}}></script>
+    <script src={{asset("frontend/assets/js/contact-form-script.js")}}></script>
+    <script src={{asset("frontend/assets/js/custom.js")}}></script>
 		</head>
 	</html>
 </body>{% endblock %}</head><body>{% block header %}
@@ -260,7 +264,7 @@
 							</div>
 						</div>
 						<div class="optional-item">
-							<a href="{{ path('app_login') }}" class="default-btn two">Log in</a>
+							<a href="{{ path('app_logout') }}" class="default-btn two">Log out </a>
 						</div>
 					</div>
 					<div class="mobile-nav">
@@ -380,7 +384,7 @@
 		<div class="footer-widget ps-5">
 			<h3>Newsletter</h3>
 			<p>Hello</p>
-			<div class="newsletter-area">
+			<!--<div class="newsletter-area">
 				<form class="newsletter-form" data-toggle="validator" method="POST">
 					<input type="email" class="form-control" placeholder="Enter Your Email" name="EMAIL" required autocomplete="off">
 					<button class="subscribe-btn" type="submit">
@@ -388,7 +392,7 @@
 					</button>
 					<div id="validator-newsletter" class="form-result"></div>
 				</form>
-			</div>
+			</div>-->
 		</div>
 	</div>
 </div></div></div><div class="copyright-area"><div class="container">
