--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,61 +3,29 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="inner-banner inner-bg7">
-    <div class="container">
-        <div class="inner-title text-center">
-            <h3>Log In</h3>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>Log In</li>
-            </ul>
+<form method="post">
+    {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_admin_logout') }}">Logout</a>
         </div>
-    </div>
-</div>
+    {% endif %}
 
-<div class="user-area pt-100 pb-70">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-12">
-                <div class="user-all-form">
-                    <div class="contact-form">
-                        <h3>Log In</h3>
-                        <form method="post">
-                            {% if error %}
-                                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                            {% endif %}
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputEmail">Email</label>
+    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    <label for="inputPassword">Password</label>
+    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-                            {% if app.user %}
-                                <div class="mb-3">
-                                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                </div>
-                            {% endif %}
+    <input type="hidden" name="_csrf_token"
+           value="{{ csrf_token('authenticate') }}"
+    >
 
-                            <div class="form-group">
-                                <label for="username">Email address</label>
-                               <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-                            </div>
-
-                            <div class="form-group">
-                               <label for="inputPassword">Password</label>    
-    <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-                            </div>
-
-                            <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="rememberMe" name="_remember_me">
-                                <label class="form-check-label" for="rememberMe">Remember me</label>
-                            </div>
-
-                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-                            <button type="submit" class="btn btn-primary">Log In</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+    <button class="btn btn-lg btn-primary" type="submit">
+        Sign in
+    </button>
+</form>
 {% endblock %}
