--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'WelcomeBase.html.twig' %}
 
 {% block body %}
 <div class="inner-banner inner-bg9">
@@ -6,7 +6,7 @@
         <div class="inner-title text-center">
             <h3>Register</h3>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="{{ path('Welcome') }}" >Home</a></li>
                 <li>Register</li>
             </ul>
         </div>
@@ -82,30 +82,30 @@
             <a href="{{ path('app_adresse_new') }}" class="default-btn two">Ajouter votre adresse</a>
         </div>
     </div>
-</div>
 
-
-<div style="margin-bottom: 20px;">
-    <!-- Un espace vide pour l'espacement -->
-</div>
-                        <div class="col-lg-12 col-md-12 text-center d-flex justify-content-center">
-                            <button type="submit" class="default-btn">
-                                Register Now
-                            </button>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12">
+                            <!-- Bouton pour soumettre le formulaire -->
+                            <div class="col-lg-12 col-md-12 text-center d-flex justify-content-center">
+                                <button type="submit" class="default-btn">
+                                    Register Now
+                                </button>
+                            </div>
                         </div>
-                        {{ form_end(userForm) }}
-                        
-                                    <div class="col-12 text-center">
-                            <p class="account-desc">
-                                Already have an account?
-                                <a href="login.html">Log In</a>
-                            </p>
-                        </div>
+                    </div>
+                    {{ form_end(userForm) }}
+                    <div class="col-12 text-center">
+                        <p class="account-desc">
+                            Already have an account?
+                            <a href="{{ path('app_login') }}" >Log In</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
 
 {% endblock %}
