--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,54 +1,47 @@
-{% extends 'adminBase.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Nos Chefs
+{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+	<div class="inner-banner inner-bg1">
+		<div class="container">
+			<div class="inner-title text-center">
+				<h3>Nos chefs</h3>
+				<ul>
+					<li>
+						<a href="index.html">Home</a>
+					</li>
+					<li>Nos chefs</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+<div class="team-area pt-100 pb-70">
+    <div class="container">
+        <div class="section-title text-center">
+            
+            <h2>Decouvrez les meilleures chefs avec nous </h2>
+        </div>
+        <div class="row pt-45 justify-content-center">
+            {% for user in users %}
+            <div class="col-lg-3 col-sm-6">
+                <div class="team-card active">
+                    <div class="team-img">
+                        <a href="#">
+                            <img src="{{ user.image }}" alt="Team Images">
+                        </a>
+                    </div>
+                    <div class="content">
+                        <h3><a href="#">{{ user.nom }} {{ user.prenom }}</a></h3>
+                       
+                        
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Idu</th>
-                <td>{{ user.idu }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ user.nom }}</td>
-            </tr>
-            <tr>
-                <th>Prenom</th>
-                <td>{{ user.prenom }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Mdp</th>
-                <td>{{ user.mdp }}</td>
-            </tr>
-            <tr>
-                <th>Tel</th>
-                <td>{{ user.tel }}</td>
-            </tr>
-            <tr>
-                <th>Role</th>
-                <td>{{ user.role }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ user.image }}</td>
-            </tr>
-             <tr>
-                <th>idA</th>
-                <td>{{ user.adresse.idA }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    <a href="{{ path('app_user_edit', {'idu': user.idu}) }}">edit</a>
-
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
