--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminBase.html.twig' %}
 
 {% block title %}New Produit{% endblock %}
 
@@ -7,5 +7,6 @@
 
     {{ include('produit/_form.html.twig') }}
 
-    <a href="{{ path('app_produit_index') }}">back to list</a>
+
+
 {% endblock %}
