--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminBase.html.twig' %}
 
 {% block title %}Edit Produit{% endblock %}
 
@@ -7,7 +7,7 @@
 
     {{ include('produit/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_produit_index') }}">back to list</a>
+    <a href="{{ path('app_produit_indexadmin') }}">back to list</a>
 
     {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
